--- a/practicals/walk-through/wafer-version-wt3-memcpy/Makefile
+++ b/practicals/walk-through/wafer-version-wt3-memcpy/Makefile
@@ -1,4 +1,4 @@
 all:
 	./commands.sh
 clean:
-	rm -rf out/ simconfig.json simfab_traces/ sim.log wio_flow.json
+	rm -rf artifact_id.json *.tar.gz surrogate* wsjob*
